# libmpopt

./: .clangd  CMakeLists.txt  Containerfile  Containerfile.base  Dockerfile  LICENSE  README.md  _config.yml  index.md  meson.build  meson.postinst.in  meson_options.txt  python_sitelib_helper  setup-dev-env
cmake/: FindGUROBI.cmake
include/ct/: all.hpp  ct.h  graph.hpp  system_includes.hpp  tracker.hpp  types.hpp
include/ct/factor/: conflict.hpp  detection.hpp
include/ct/message/: conflict.hpp  consistency.hpp  transition.hpp
include/ct/util/: allocator.hpp  debug.hpp  fixed_vector.hpp  misc.hpp  signal_handler.hpp
include/mpopt/: ct.h  ct.hpp  gm.h  gm.hpp  mwis.h  mwis.hpp  mwis_bregman_exp.h  mwis_bregman_log.h  mwis_original.h  mwis_temp_cont.h  qap.h  qap.hpp
include/mpopt/common/: allocator.hpp  array_accessor.hpp  config.h.in  consistency.hpp  debug.hpp  fixed_vector.hpp  graph.hpp  misc.hpp  signal_handler.hpp  solver.hpp  system_includes.hpp  types.hpp
include/mpopt/common/factors/: pairwise.hpp  unary.hpp
include/mpopt/ct/: all.hpp  combilp.hpp  conflict_factor.hpp  conflict_messages.hpp  conflict_subsolver.hpp  ct.h  detection_factor.hpp  graph.hpp  gurobi.hpp  misc.hpp  tracker.hpp  transition_messages.hpp  types.hpp
include/mpopt/ct/factor/: conflict.hpp
include/mpopt/ct/message/: transition.hpp
include/mpopt/ct/subsolver/: conflict.hpp
include/mpopt/ct/util/: allocator.hpp  debug.hpp  fixed_vector.hpp  signal_handler.hpp
include/mpopt/gm/: combilp.hpp  graph.hpp  gurobi.hpp  messages.hpp  pairwise_factor.hpp  solver.hpp  unary_factor.hpp
include/mpopt/mwis/: qpbo.hpp  solver.hpp  solver_bregman_exp.hpp  solver_bregman_log.hpp  solver_cont_temp.hpp  solver_original.hpp
include/mpopt/qap/: combilp.hpp  graph.hpp  grasp.hpp  greedy.hpp  gurobi.hpp  local_search.hpp  messages.hpp  pairwise_factor.hpp  pairwise_messages.hpp  primal_storage.hpp  qpbo.hpp  solver.hpp  unary_factor.hpp  unary_messages.hpp  uniqueness_factor.hpp  uniqueness_messages.hpp
lib/: ct.cpp  gm.cpp  mwis.cpp  mwis_bregman_exp.cpp  mwis_bregman_log.cpp  mwis_original.cpp  mwis_temp_cont.cpp  qap.cpp
libqpbo/: libqpbo.pc.in  meson.build  prepare
pch/: ct_pch.hpp
publications/: aistats2020.md  iccv2021.md  mwis2024.md
python/ct/: __init__.py  gurobi.py  jug.py  model.py  rounding.py  tracker.py  utils.py
python/mpopt/: utils.py
python/mpopt/common/: config.py.in  gurobi.py  solver.py
python/mpopt/ct/: __init__.py  gurobi.py  jug.py  rounding.py  tracker.py
python/mpopt/ct/cmdline/: jug.py  test.py
python/mpopt/gm/: __init__.py  model.py  solver.py  uai.py
python/mpopt/gm/cmdline/: uai.py
python/mpopt/mwis/: __init__.py  cbc.py  dimacs.py  gm.py  gurobi.py  jug.py  model.py  preprocess.py  snap.py  solver.py  uai.py
python/mpopt/mwis/cmdline/: gm.py  json.py  json_to_dimacs.py  jug_batch_convert.py  jug_to_dimacs.py  jug_to_mwis.py  lp.py  preprocess.py  snap_to_json.py  to_uai.py
python/mpopt/qap/: __init__.py  dd.py  gurobi.py  model.py  primals.py  solver.py
python/mpopt/qap/cmdline/: dd.py  dd_gurobi.py  dd_to_uai.py
qapopt/: LICENSE  meson.build  meson_options.txt
qapopt/include/qapopt/: qap.h  qap.hpp
qapopt/include/qapopt/common/: allocator.hpp  array_accessor.hpp  config.h.in  consistency.hpp  debug.hpp  fixed_vector.hpp  meson.build  misc.hpp  signal_handler.hpp  solver.hpp  system_includes.hpp  types.hpp
qapopt/include/qapopt/common/factors/: pairwise.hpp  unary.hpp
qapopt/include/qapopt/qap/: graph.hpp  greedy.hpp  gurobi.hpp  lsa_tr.hpp  pairwise_messages.hpp  primal_storage.hpp  qpbo.hpp  solver.hpp  unary_factor.hpp  unary_messages.hpp  uniqueness_factor.hpp  uniqueness_messages.hpp
qapopt/lib/: qap.cpp
qapopt/python/qapopt/common/: gurobi.py  solver.py
qapopt/python/qapopt/qap/: __init__.py  dd.py  gurobi.py  model.py  primals.py  solver.py
qapopt/python/qapopt/qap/cmdline/: dd.py  dd_fusion.py  dd_greedy_gen.py
qapopt/swig/: qap.i
scripts/: export-singularity  install-into-venv  print-python-libpath  setup-dev-env  setup-local-dev-env
swig/: ct.i  gm.i  mwis.i  mwis_bregman_exp.i  mwis_bregman_log.i  mwis_original.i  mwis_temp_cont.i  qap.i
tests/: run
tests/instances/: ct_000.jug.xz  gm_000.uai.xz  qap_000.dd.xz
